--- a/client/public/manifest.json
+++ b/client/public/manifest.json
@@ -1,15 +1,25 @@
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
+  "short_name": "CRWN-Clothing",
+  "name": "CRWN - Clothing App by Swaraj",
   "icons": [
     {
       "src": "favicon.ico",
       "sizes": "64x64 32x32 24x24 16x16",
       "type": "image/x-icon"
+    },
+    {
+      "src": "favicon-512x512",
+      "sizes": "512x512",
+      "type": "image/png"
+    },
+    {
+      "src": "favicon-192x192",
+      "sizes": "192x192",
+      "type": "image/png"
     }
   ],
   "start_url": ".",
   "display": "standalone",
-  "theme_color": "#000000",
+  "theme_color": "#808282",
   "background_color": "#ffffff"
 }
