--- a/client/public/manifest.json
+++ b/client/public/manifest.json
@@ -8,12 +8,12 @@
       "type": "image/x-icon"
     },
     {
-      "src": "favicon-512x512",
+      "src": "favicon-512x512.png",
       "sizes": "512x512",
       "type": "image/png"
     },
     {
-      "src": "favicon-192x192",
+      "src": "favicon-192x192.png",
       "sizes": "192x192",
       "type": "image/png"
     }
